package esri_result;

option optimize_for = LITE_RUNTIME;

message Result {

        repeated item items = 2;

        message item {
             repeated record records = 1;
        }

        message record {
             optional string objectIdFieldName = 1; 
             optional uniqueIdField uniqueIdField = 2; 
             optional string globalIdFieldName = 3; 
             // unknown 4
             optional geometryProperties geometryProperties = 5; 
             // unknown 6
             optional geometryType geometryType = 7; 
             optional spatialReference spatialReference = 8; 
             optional bool exceededTransferLimit = 9; 
             // unknown 10
             // unknown 11
             optional geometryOffset geometryOffset = 12; 
             repeated field fields = 13; 
             // unknown 14 
             repeated feature features = 15; 
        }

        enum geometryType {
             UNKNOWN = 0;
             esriGeometryPoint = 1;
             esriGeometryPolyline = 2;
             esriGeometryPolygon = 3;
        }

        message uniqueIdField {
                optional string name = 1;
                optional bool isSystemMaintained = 2;
        }

        message geometryProperties {
                optional string shapeAreaFieldName = 1;
                optional string shapeLengthFieldName = 2;
                optional string units = 3;
        }

        message spatialReference {
                optional uint64 wkid = 1;
                optional uint64 latestWkid = 2;
        }

        message field {
                optional string name = 1;
                optional fieldType fieldType = 22;
                optional string alias = 3;
                // 4
                optional string domain = 5;
        }

        enum fieldType {
                UNKNOWN = 0;
                esriFieldTypeInteger = 1;
                // 2
                esriFieldTypeDouble = 3;
                esriFieldTypeString = 4;
                esriFieldTypeDate = 5;
                esriFieldTypeOID = 6;
                // 7
                // 8
                // 9
                // 10
                esriFieldTypeGlobalID = 11;
        }


        message feature {
                repeated attribute attributes = 1;
                optional geometry geometry = 2;
        }

        message attribute {
                optional string esriFieldTypeString = 1;
                // 2;
                optional double esriFieldTypeDouble = 3;
                optional sint64 esriFieldTypeInteger = 4;
                optional int64 esriFieldTypeOID = 5;
                // 6;
                // 7;
                optional sint64 esriFieldTypeDate= 8;
        }

        message geometry {
                // 1
                repeated uint64 verticies = 2 [ packed = true ];
                repeated sint64 paths = 3 [ packed = true ];
        }

        message geometryOffset {
                // 1
                optional geometryOffsetMultiplier geometryOffsetMultiplier = 2;
                optional geometryOffsetValue geometryOffsetValue = 3;
        }

        message geometryOffsetMultiplier {
                optional double multiplierX = 1;
                optional double multiplierY = 2;
        }

        message geometryOffsetValue {
                optional double offsetX = 1;
                optional double offsetY = 2;
        }

        //extensions 16 to 8191;
}
